# prover/docs/swagger.json
@@ -189,6 +189,16 @@
                 "timestamp": {
                     "type": "integer"
                 },
+                "tx_hash": {
+                    "type": "string"
+                },
+                "tx_hashes": {
+                    "description": "L2 transaction hashes in batch",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "witness": {}
             }
         },
@@ -215,6 +225,16 @@
                 },
                 "timestamp": {
                     "type": "integer"
+                },
+                "txHash": {
+                    "type": "string"
+                },
+                "txHashes": {
+                    "description": "L2 transaction hashes",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "verifiedAt": {
                     "type": "integer"
